<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_bottom_title">-- About us --</string>
    <string name="about_home_page">Home Page</string>
    <string name="about_telegram_name">Telegram Channel</string>
    <string name="action_add_file">Add from File</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_qrcode_scan">QRCode Scan</string>
    <string name="action_qrcode_scan_history">Scan History</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share Me</string>
    <string name="action_show_hide_apps">Show hidden apps</string>
    <string name="adding_app">Adding…</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_info_clear_cache">Clear cache</string>
    <string name="app_info_clear_data">Clear storage</string>
    <string name="app_info_force_stop">Force Stop</string>
    <string name="app_info_notification">Notification</string>
    <string name="app_info_open">Open</string>
    <string name="app_info_toolbar_title">App info</string>
    <string name="app_info_uninstall">Delete</string>
    <string name="app_info_version">version</string>
    <string name="app_loading_open">Opening</string>
    <string name="app_name">Multi Cloner</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_app_and_install">Apps</string>
    <string name="clear_app_complete">Cleaned up</string>
    <string name="clear_data_negative">Delete</string>
    <string name="clear_data_neutral">Cancel</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clone_app_button_text">Add App</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="create_shortcut_change_icon">Change Icon</string>
    <string name="create_shortcut_create">Create</string>
    <string name="create_shortcut_name">Shortcut Name</string>
    <string name="create_shortcut_ok">Create Short %s Successful</string>
    <string name="create_shortcut_preview">Icon Preview</string>
    <string name="delete_space_content">Do you want to delete the whole space? All cloned apps in space %d will be removed, and cannot be recovered.</string>
    <string name="delete_space_title">Delete Space %d.</string>
    <string name="dialog_privacy_content">" &lt;p>&lt;span style=font-size:16px;>&lt;b>Privacy Notice&lt;/b>&lt;/span>&lt;/p> &lt;p>To provide you with better services, please review our:&lt;/p> &lt;ul> &lt;li>&lt;a href=redirect://privacy style=text-decoration: underline;>Privacy Policy&lt;/a> (Data Collection Policy)&lt;/li> &lt;li>&lt;a href=redirect://protocol style=text-decoration: underline;>Terms of Service&lt;/a> (User Agreement)&lt;/li> &lt;/ul> &lt;p>&lt;span style=font-size:14px;>&lt;b>Data We Collect&lt;/b>&lt;/span>&lt;/p> &lt;p> By accepting, you agree to the collection of certain information to improve our services. This data is collected in a way that does not directly identify you. &lt;/p> &lt;p>&lt;span style=font-size:13px;>&lt;b>Installed Applications&lt;/b>&lt;/span>&lt;/p> &lt;p> Purpose: To enable app cloning features.&lt;br/> Data Collected:&lt;br/> • List of installed apps, package names and version information, etc.&lt;br/> • Basic device compatibility information&lt;br/> Important Notes:&lt;br/> • No personal identifiers such as your name or contacts are collected&lt;br/> • Data is never shared with third parties&lt;br/> • Used only to support app functionality &lt;/p> &lt;p>&lt;span style=font-size:13px;>&lt;b>Crash Diagnostics&lt;/b>&lt;/span>&lt;/p> &lt;p> Purpose: To improve app stability and fix technical issues.&lt;br/> Data Collected:&lt;br/> • Error type and stack trace&lt;br/> • Timestamp of occurrence&lt;br/> • Device model and OS version, etc.&lt;br/> Important Notes:&lt;br/> • No personal or account information is collected&lt;br/> • Data is automatically anonymized&lt;br/> • Used only for technical analysis and app improvement &lt;/p> &lt;p>&lt;span style=font-size:13px;>&lt;b>Advertising&lt;/b>&lt;/span>&lt;/p> &lt;p> This app contains advertisements provided by third-party services (e.g., Google AdMob). &lt;/p> "</string>
    <string name="edit_app_icon_title">Change %s Icon</string>
    <string name="edit_app_name_hint">App Name</string>
    <string name="edit_app_name_title">Rename %s</string>
    <string name="edit_app_reset">Reset to Original</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="feedback_email_body">"Here are some issues I've encountered or suggestions I have:

"</string>
    <string name="feedback_email_subject">App Feedback</string>
    <string name="feedback_toast_no_email_app">Email app not found on your device.</string>
    <string name="force_update_action">Update Now</string>
    <string name="force_update_content">"1. Support Latest Android version 
2. Optimize Homepage Performance and Improved startup speed
3. Fix known issues for a better experience"</string>
    <string name="force_update_size">Update package size: 6MB approximately</string>
    <string name="force_update_title">Found New Version</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_fragment_label">Demo</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label">Label</string>
    <string name="loading_apps">Loading…</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="quantity_picker_title">Select Clone Quantity</string>
    <string name="rate_dialog_cancel">No, Thanks</string>
    <string name="rate_dialog_go_to_store">Rate on Play Store</string>
    <string name="rate_dialog_subtitle_positive">Your great review is our biggest motivation!</string>
    <string name="rate_dialog_title">Enjoying Our App?</string>
    <string name="settings_choose_icon">Choose Icon</string>
    <string name="uninstall_content">Do you want to delete it?</string>
    <string name="uninstall_negative">OK</string>
    <string name="uninstall_neutral">Cancel</string>
</resources>