<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="220.0dip" app:cardCornerRadius="16.0dip" app:cardElevation="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/edit_app_icon_title" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_icon_preview" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="10.0dip" android:contentDescription="@string/create_shortcut_preview" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_icon_source" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:maxLines="1" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" />
        <com.google.android.material.button.MaterialButton android:id="@id/btn_choose_icon" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/settings_choose_icon" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:cornerRadius="16.0dip" style="?materialButtonOutlinedStyle" />
        <com.google.android.material.button.MaterialButton android:id="@id/btn_reset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/edit_app_reset" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:cornerRadius="16.0dip" style="?materialButtonOutlinedStyle" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="16.0dip" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip">
            <com.google.android.material.button.MaterialButton android:textSize="14.0sp" android:id="@id/btn_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minWidth="96.0dip" android:text="@string/uninstall_neutral" android:maxLines="1" android:layout_weight="1.0" app:cornerRadius="16.0dip" style="?materialButtonOutlinedStyle" />
            <com.google.android.material.button.MaterialButton android:textSize="14.0sp" android:id="@id/btn_confirm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minWidth="96.0dip" android:text="@string/uninstall_negative" android:maxLines="1" android:layout_weight="1.0" android:layout_marginStart="20.0dip" app:cornerRadius="16.0dip" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>