<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardCornerRadius="16.0dip" app:cardElevation="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24.0sp" android:gravity="center" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/clear_data_negative" />
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/tv_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="31.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="31.0dip" android:text="@string/uninstall_content" android:layout_marginHorizontal="31.0dip" />
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="24.0dip" android:layout_marginHorizontal="20.0dip">
            <com.google.android.material.button.MaterialButton android:textSize="14.0sp" android:id="@id/btn_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/uninstall_neutral" android:maxLines="1" android:layout_weight="1.0" android:layout_marginStart="10.0dip" app:cornerRadius="16.0dip" style="?materialButtonOutlinedStyle" />
            <com.google.android.material.button.MaterialButton android:textSize="14.0sp" android:id="@id/btn_confirm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/uninstall_negative" android:maxLines="1" android:layout_weight="1.0" android:layout_marginStart="20.0dip" android:layout_marginEnd="10.0dip" app:cornerRadius="16.0dip" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>