<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/root_container" android:background="@color/black_80" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_gravity="bottom" android:id="@id/card_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" app:cardCornerRadius="20.0dip" app:cardElevation="8.0dip">
        <LinearLayout android:orientation="vertical" android:paddingLeft="24.0dip" android:paddingTop="16.0dip" android:paddingRight="24.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="24.0dip" android:paddingVertical="16.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/black" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_shortcut" />
            <FrameLayout android:layout_gravity="center_horizontal" android:id="@id/iconContainer" android:background="?selectableItemBackgroundBorderless" android:focusable="true" android:clickable="true" android:layout_width="80.0dip" android:layout_height="80.0dip">
                <ImageView android:layout_gravity="center" android:id="@id/iv_icon_preview" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@mipmap/ic_launcher" android:scaleType="fitXY" android:contentDescription="@string/create_shortcut_preview" />
                <ImageView android:layout_gravity="end|bottom|center" android:background="@drawable/circle_background" android:padding="4.0dip" android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_edit" app:tint="@android:color/white" />
            </FrameLayout>
            <TextView android:textColor="?colorPrimary" android:layout_gravity="center_horizontal" android:id="@id/tv_change_icon" android:background="?selectableItemBackground" android:padding="4.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/create_shortcut_change_icon" />
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:boxCornerRadiusBottomEnd="8.0dip" app:boxCornerRadiusBottomStart="8.0dip" app:boxCornerRadiusTopEnd="8.0dip" app:boxCornerRadiusTopStart="8.0dip" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/et_shortcut_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/create_shortcut_name" android:maxLines="1" android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:textSize="16.0sp" android:id="@id/btn_create_shortcut" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/create_shortcut_create" app:cornerRadius="16.0dip" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>