<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:id="@id/cv_update_card" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="80.0dip" android:layout_marginBottom="80.0dip" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" android:layout_marginVertical="80.0dip" app:cardBackgroundColor="@android:color/white" app:cardCornerRadius="16.0dip" app:cardElevation="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/iv_update_header" android:layout_width="128.0dip" android:layout_height="128.0dip" android:layout_marginTop="20.0dip" android:src="@mipmap/ic_launcher" android:scaleType="centerCrop" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff222222" android:id="@id/tv_update_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:text="@string/force_update_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_update_header" />
            <ScrollView android:id="@id/sv_content" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:maxHeight="120.0dip" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constrainedHeight="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_update_title">
                <TextView android:textSize="14.0sp" android:textColor="#ff666666" android:id="@id/tv_update_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/force_update_content" android:lineSpacingExtra="4.0dip" />
            </ScrollView>
            <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:id="@id/tv_update_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/force_update_size" app:layout_constraintStart_toStartOf="@id/sv_content" app:layout_constraintTop_toBottomOf="@id/sv_content" />
            <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/btn_update_now" android:background="@drawable/button_update_background" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginBottom="16.0dip" android:text="@string/force_update_action" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>