<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardCornerRadius="16.0dip" app:cardElevation="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="24.0dip">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="?android:textColorPrimary" android:id="@id/tv_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quantity_picker_title" />
        <TextView android:textSize="32.0sp" android:textStyle="bold" android:textColor="?colorPrimary" android:layout_gravity="center_horizontal" android:id="@id/tv_quantity_display" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="1" />
        <SeekBar android:id="@id/seekbar_quantity" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="32.0dip" android:layout_marginTop="12.0dip" android:maxHeight="48.0dip" android:max="49" android:progress="8" android:progressDrawable="@drawable/seekbar_progress_style" android:thumb="@drawable/seekbar_thumb_wide" android:paddingStart="0.0dip" android:paddingEnd="0.0dip" android:splitTrack="false" android:paddingVertical="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_num_brightness_sun" app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
            <com.google.android.material.button.MaterialButton android:id="@id/button_cancel_clone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uninstall_neutral" android:layout_marginEnd="8.0dip" app:cornerRadius="16.0dip" style="?materialButtonOutlinedStyle" />
            <com.google.android.material.button.MaterialButton android:id="@id/button_confirm_clone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uninstall_negative" app:cornerRadius="16.0dip" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>