<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/main_content_area" android:background="@drawable/bg_dialog_card_top" android:paddingBottom="24.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="-32.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/header_icon_container">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:id="@id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/rate_dialog_title" />
        <TextView android:textSize="14.0sp" android:textColor="@android:color/darker_gray" android:gravity="center" android:id="@id/dialog_subtitle" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/rate_dialog_subtitle_positive" android:paddingHorizontal="16.0dip" />
        <RatingBar android:theme="@style/CustomRatingBar" android:id="@id/dialog_rating_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:numStars="5" android:rating="0.0" android:stepSize="1.0" android:isIndicator="false" android:progressTint="#ffffc107" android:progressBackgroundTint="#ffbdbdbd" style="?android:ratingBarStyleIndicator" />
    </LinearLayout>
    <FrameLayout android:id="@id/header_icon_container" android:background="@drawable/bg_dialog_rounded_white" android:layout_width="64.0dip" android:layout_height="64.0dip" android:elevation="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@id/header_icon" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/ic_dialog_rating_star" />
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/feedback_input_container" android:background="@android:color/white" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="12.0dip" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:paddingHorizontal="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/main_content_area">
        <EditText android:textSize="14.0sp" android:textColorHint="#ff9e9e9e" android:gravity="start|center|top" android:id="@id/feedback_edit_text" android:background="@drawable/bg_feedback_input" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="100.0dip" android:hint="Tell us what we can improve..." android:inputType="textMultiLine" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/bottom_action_bar" android:background="@drawable/bg_dialog_card_bottom" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:paddingVertical="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/feedback_input_container">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/darker_gray" android:gravity="center" android:id="@id/cancel_button" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="48.0dip" android:text="@string/rate_dialog_cancel" android:layout_weight="1.0" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="?colorPrimary" android:gravity="center" android:id="@id/action_button" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="48.0dip" android:text="@string/rate_dialog_go_to_store" android:layout_weight="1.0" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>